[package]
name = "blockchain"
authors = ["Fcihpy <fcihpy9527@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
rust-crypto = "0.2.36"
chrono = "0.4.19"
bigint = "4.4.3"
sled = "0.34"